--- a/User Management System/style.css
+++ b/User Management System/style.css
@@ -32,22 +32,28 @@ input.button {
   margin-top: 10px;
   height: auto;
 }
-div.popup{
-  margin-top: 10px;
+#popup {
+  font-size: 1rem;
   height: auto;
-  border-radius: 0%;
-  display: none;
+  width: 400px;
+  padding: 1.75rem 3.5rem;
+  position: absolute;
+  border: none;
+  background-color: #fff;
+  color: #444;
+  border-radius: 10rem;
+  cursor: pointer;
+  z-index: 5;
 }
-p{
+p {
   padding-left: 10px;
 }
-header{
+header {
   margin-top: -10px;
   height: 20px;
   background-color: purple;
 }
-#popupbutton{
- 
+#popupbutton {
   background-color: purple;
   text-align: center;
   margin-left: 80%;
@@ -55,4 +61,17 @@ header{
   width: 80px;
   border-radius: 10%;
   margin-bottom: 10px;
+}
+.hidden {
+  display: none;
+}
+.overlay {
+  position: absolute;
+  top: 0;
+  left: -28%;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.6);
+  backdrop-filter: blur(3px);
+  /* z-index: 5; */
 }
