--- a/User Management System/style.css
+++ b/User Management System/style.css
@@ -72,6 +72,13 @@ header {
   width: 100%;
   height: 100%;
   background-color: rgba(0, 0, 0, 0.6);
-  backdrop-filter: blur(3px);
-  /* z-index: 5; */
 }
+div.search {
+  position: relative;
+  height: 30px;
+  margin-top: 10px;
+  font-weight: bold;
+}
+/* .searchbar {
+  float: right;
+} */
