--- a/Data tables/style.css
+++ b/Data tables/style.css
@@ -59,3 +59,12 @@ input.button:hover {
   color: white;
   background-color: darkgreen;
 }
+#myInput {
+  margin-left: 40%;
+  background-position: 10px 10px;
+  background-repeat: no-repeat;
+  font-size: 16px;
+  padding: 12px 20px 12px 40px;
+  border: 1px solid #ddd;
+  margin-bottom: 12px;
+}
