--- a/Single Page Application/style.css
+++ b/Single Page Application/style.css
@@ -118,4 +118,38 @@ body {
     border: 1px solid #ddd;
     margin-bottom: 12px;
   }
-  
+  input.viewbutton{
+    width: 100px;
+    height: 30px;
+    margin-left: 15px;
+    background-color: purple;
+    margin-top: 5px;
+    text-align: center;
+    color: white;
+    margin-left: 45%;
+    }
+    section{
+    margin-top: -200px;
+    font-size: 1rem;
+    height: 100%;
+    width: 90%;
+    padding: 1.75rem 3.5rem;
+    position: absolute;
+    border: none;
+    color: #444;
+    cursor: pointer;
+    z-index: 10;
+    background-color: whitesmoke;
+  -webkit-backdrop-filter: blur(5px);
+  backdrop-filter: blur(5px);
+    }
+  #closeuser{
+    width: 120px;
+    height: 30px;
+    float: right;
+    background-color: purple;
+    margin-top: 5px;
+    text-align: center;
+    color: white;
+    margin-left: 45%;
+  }
