--- a/Single Page Application/style.css
+++ b/Single Page Application/style.css
@@ -51,9 +51,9 @@ body {
     background-color: #f2f2f2;
   }
   
-  #customers tr:hover {
+  /* #customers tr:hover {
     background-color: #ddd;
-  }
+  } */
   
   #customers th {
     padding-top: 12px;
