--- a/Single Page Application/style.css
+++ b/Single Page Application/style.css
@@ -153,19 +153,20 @@ section {
   color: white;
   margin-left: 45%;
 }
-span {
-  margin-top: -200px;
-  margin-left: 25%;
-  font-size: 1rem;
+div.addexpensepopup {
   height: auto;
-  width: auto;
-  padding: 1.75rem 3.5rem;
+  padding-bottom: 20px;
   position: absolute;
-  border: none;
-  color: #444;
-  cursor: pointer;
-  z-index: 10;
-  background-color: whitesmoke;
-  -webkit-backdrop-filter: blur(5px);
-  backdrop-filter: blur(5px);
+  background-color: azure;
+}
+#goback {
+  width: 80px;
+  height: 30px;
+  float: right;
+  background-color: purple;
+  margin-top: 5px;
+  margin-right: 10px;
+  text-align: center;
+  color: white;
+  margin-left: 45%;
 }
